finishing swagger docs
